# winredock

./: .gitignore  AUTHORS  README  README.md  autogen.sh  configure.ac
.github/: FUNDING.yml
msvs/: WM.sln  WM.vcxproj  WM.vcxproj.filters
scripts/: user.reg
src/: Makefile.am  common.cc  common.hh  deserializer.cc  deserializer.hh  dev.cc  dev.hh  main.cc  main.hh  poshandler.cc  poshandler.hh  resource.h  serializer.cc  serializer.hh  virt_desktop.cc  virt_desktop.hh  window.cc  window.hh  wm.rc
